gcc/testsuite/rust/rustc/ui/mismatched_types/main.rs
fn main() {
    let x: u32 = ( // { dg-error ".E0308." "" { target *-*-* } }
    );
}

